[BUG] Decrease contrast of background elements when a deck is opened [#56937154]

--- a/stylesheets/_decks.scss
+++ b/stylesheets/_decks.scss
@@ -240,7 +240,7 @@
 
 // The styles applied to background elements to reduce their visual prominence 
 .deck-background {
-  opacity: 0.4;
+  opacity: 0.5;
 }
 
 // Inverse deck styles for a white-on-black look
